--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.4",
     "gray-matter": "^4.0.3",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "remark-html": "^15.0.1",
+    "remark-parse": "^10.0.1"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
